--- a/MauiAppGuiaCurso/MainPage.xaml
+++ b/MauiAppGuiaCurso/MainPage.xaml
@@ -3,34 +3,40 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiAppGuiaCurso.MainPage">
 
-    <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
+    <ContentPage.Resources>
 
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
 
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
+        <ResourceDictionary>
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
-        </VerticalStackLayout>
-    </ScrollView>
+            <Style x:Key="Estilo comum" TargetType="Button">
+                <Setter Property="HorizontalOptions" Value="FillAndExpand"/>
+                <Setter Property="VerticalOptions" Value="Center"/>
+                <Setter Property="FontSize" Value="30"/>
+                <Setter Property="TextColor" Value="Black"/>
+            </Style>
+
+            <Style x:Key="Botao" TargetType="Button" BasedOn="{StaticResource Estilo comum}">
+                <Setter Property="BackgroundColor" Value="LightGray"/>
+                <Setter Property="BorderWidth" Value="2"/>
+            </Style>
+
+        </ResourceDictionary>
+
+    </ContentPage.Resources>
+
+    <ContentPage.Content>
+
+        <Grid RowDefinitions="100, *, *, *"
+              ColumnDefinitions="*"
+              RowSpacing="1" ColumnSpacing="3" Margin="10">
+
+            <Button Grid.Row="1" Grid.Column="0" Style="{StaticResource Botao}" x:Name="primeiro" Text="Primeiro" Clicked="primeiro_Clicked" />
+            <Button Grid.Row="2" Grid.Column="0" Style="{StaticResource Botao}" x:Name="segundo"  Text="Segundo" Clicked="segundo_Clicked" />
+            <Button Grid.Row="3" Grid.Column="0" Style="{StaticResource Botao}" x:Name="terceiro" Text="Terceiro" Clicked="terceiro_Clicked" />
+            
+
+        </Grid>
+
+    </ContentPage.Content>
 
 </ContentPage>
